Kind/etkb-rehber/service-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: etkbrehber
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: backend
