Kind/etkb-rehber/service-ng.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: etkbrehber
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: frontend
