Kind/etkb-rehber/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rehber-ingress
  namespace: etkbrehber
  annotations:
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/ingress.allow-http: "true"
    ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
spec:
  rules:
  - host: rehber2.enerji.gov.tr
    http:
      paths:
        - pathType: Prefix
          path: /api
          backend:
            service:
               name: api-service
               port:
                 number: 80
        - pathType: Prefix
          path: /
          backend:
            service:
               name: frontend-service
               port:
                 number: 80
